--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
 </head>
 
 <body style="background-color:#0e1117;color:white;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';">
-    <div style="position:absolute;left:50%;top:50%;-webkit-transform:rranslate(-50%, -50%);transform:translate(-50%, -50%);" id="ip">
-</div>
+    <div style="font-size:25px;position:absolute;left:50%;top:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%);" id="ip"></div>
             
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="application/javascript">
-        function getIP(json) {
-            var ip = json.ip;
+        $.get("https://api.ipify.org/", function (ip) {
             document.getElementById("ip").innerHTML = `Your IP address is ${ip}.`;
-        }
+        });
     </script>
-
-    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </body>
 
 </html>
